# theta-test-aggregator

./: .gitignore  README.md
backend/: README.md  docker-compose.yml  package-lock.json  package.json
backend/config/: database.json  jwt.json  swagger.json
backend/migrations/: 20200616083001_create-simulation-results.js  20200616083236_create-users.js  20200617081012_simulation-result-seq_num-to-auto_increment.js  20200618125513_create-users.js  20200618131631_create-api_keys.js  20200622081739_simulation-result-timestamp-fix.js  20200625113444_update-api-key-expiration-type.js  20200629130613_create-statistics.js  20200701104448_update-statistics.js  20200706143814_user-email-unique.js  20200707121329_create-custom-filters.js
backend/seeds/: 00-example-users.js  01-example-simulation-results.js  03-example-api-key.js  04-example-statistics.js
backend/src/: index.ts
backend/src/app/controllers/: apiKey.ts  authorization.ts  authorizationWithApiKey.ts  (+8 more)
backend/src/lib/: authentication.ts  enums.ts  mailer.ts  tableName.ts
docs/: spec.md
fixtures/: error.json  failed.json  real.json  success.json
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: angular-material.module.ts  app.component.html  app.component.ts  app.module.ts  auth.guard.ts
frontend/src/environments/: environment.prod.ts  environment.ts
infrastructure/: Makefile  docker-compose.yaml
infrastructure/migration/: layout.sql
server/: Cargo.toml
server/src/: aggregator.rs  context.rs  mail.rs  main.rs  storage.rs  store.rs
(+127 files in other folders)
